# ASE_Watchman_project

./: README.md
classification/: CMakeLists.txt  package.xml
classification/src/: main.cpp
ros_best_practices/ros_package_template/: CMakeLists.txt  package.xml
ros_best_practices/ros_package_template/include/ros_package_template/: ros_package_template_node.cpp
ros_best_practices/ros_package_template/launch/: ros_package_template.launch
ros_best_practices/ros_package_template/src/: ros_package_template_node.cpp
